@@ -1,3 +1,3 @@
-include ChangeLog COPYING urlwatch.1
-recursive-include examples *
+include ChangeLog COPYING
+recursive-include share *
 include convert-to-python3.sh
